update FCollection Replace copyonwritearray to a custom implementation for concurrent modification exception. A little bit slower but supports iterator operations. Added FCollectionTest